Fix package author email

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "repository": "git@github.com:bsonntag/react-device-orientation.git",
   "license": "MIT",
-  "author": "Benjamim Sonntag <benjamimsonntag@seegno.com>",
+  "author": "Benjamim Sonntag <benjamimsonntag@gmail.com>",
   "main": "dist/index.js",
   "scripts": {
     "bundle": "rm -rf dist && babel src --out-dir dist",
