--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "bundle": "rm -rf dist && babel src --out-dir dist",
     "bundle:watch": "babel src --out-dir dist --watch",
+    "lint": "eslint .",
     "version": "npm run bundle && git add dist"
   },
   "dependencies": {
