--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "eslint": "^6.6.0",
     "husky": "^3.0.9",
     "lint-staged": "^9.4.2",
-    "prettier": "^1.18.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "prettier": "^1.18.2"
   },
   "peerDependencies": {
     "react": "^16.3.0"
